# Ai_Assistant

./: .gitignore  =0.16.0  ADVANCED_LEARNING_COMPLETE.md  ADVANCED_LEARNING_SYSTEMS_COMPLETE.md  AI_RESPONSE_FIX_README.md  ALL_SYSTEMS_COMPLETE.md  BACKEND_FIXES_DETAILED.md  CHAT_ENHANCEMENTS_COMPLETE.md  CHAT_IMPLEMENTATION_GUIDE.md  CHAT_SYSTEM_ANALYSIS_REPORT.md  CHAT_SYSTEM_COMPLETE.md  CHAT_SYSTEM_DEEP_ANALYSIS.md  CHAT_SYSTEM_FILE_MANIFEST.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONVERSATIONAL_AI_COMPLETION_PLAN.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  FULL_INTEGRATION_SUCCESS.md  GITHUB_UPLOAD_GUIDE.md  GOOGLE_ASSISTANT_VOICE_GUIDE.md  HIGH_PRIORITY_COMPLETE.md  HIGH_PRIORITY_IMPLEMENTATION_COMPLETE.md  HIGH_PRIORITY_STATUS_FINAL.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_CHAT_ENHANCEMENTS.md  IMPLEMENTATION_MANIFEST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INDEX_CHAT_SYSTEM_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  ISSUES_FIXED_SUMMARY.md  LAPTOP_MICROPHONE_SETUP.md  LEARNING_ENHANCEMENTS_TODO.md  MEDIUM_PRIORITY_IMPLEMENTATION_COMPLETE.md  OFFLINE_COMPLETE.md  OFFLINE_MODE_CHECKLIST.md  OFFLINE_MODE_FEATURES.txt  OFFLINE_MODE_FILES.txt  (+96 more)
.devcontainer/: devcontainer.json
ANALYSIS_REPORTS/: 06_CONFIGURATION_ISSUES.md
ai_assistant/: __init__.py  automation_tools_new.py  config_validator.py  database_config.py  enhanced_wake_word.py  live_taskbar_analysis.py  multilingual.py  sitecustomize.py  web_scraping.py
config/: app_integration.env.example  discovered_apps.json  multimodal_config.json  multimodal_config.json.example  user_settings.json  user_settings.json.example
docs/: ADVANCED_LEARNING_SYSTEMS.md  API_REFERENCE_COMPLETE.md  APP_INTEGRATION_SECURITY.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMAS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  LICENSE.txt  OCR_TESTING_GUIDE.md  ONLINE_ONLY_MODE_COMPLETE.md  (+11 more)
(+228 files in other folders)
